# geminal

./: .gitignore  Dockerfile  Geminal.py  Makefile  README.md  build.sh  pyproject.toml  requirements.txt  setup.cfg
geminal/: Geminal.py  __init__.py
geminal/components/: action.py  config.py  console.py  gemini.py  loading.py  selection.py  usage.py  utils.py  version.py
src/: Geminal.py
src/components/: Action.py  Banner.py  Config.py  Console.py  Gemini.py  Loading.py  Selection.py
tests/: __init__.py
