[metadata]
name = geminal
version = 0.0.1
author = Tran Doan Minh Nhat (nhattdm)
description = A Chatbot on Terminal powered by Google Generative AI.
license = license_file: LICENSE

[options]
packages = .
install_requires =
  google-generativeai==0.3.2
  prompt_toolkit==3.0.38
  pyperclip==1.8.2
  protobuf==4.25.2
  rich==13.3.2

[options.entry_points]
console_scripts =
  geminal = Geminal:main
