[metadata]
name = geminal
version = 1.0.0
author = Tran Doan Minh Nhat (nhattdm)
description = A Chatbot on Terminal powered by Google Generative AI.
license = license_file: LICENSE

[options]
packages = find_namespace:
install_requires =
  google-generativeai==0.4.1
  simple-term-menu==1.6.4
  prompt_toolkit==3.0.38
  pyperclip==1.8.2
  rich==13.3.2

[options.packages.find]
where=src
exclude =
  src
  *.src
  *.components*
  *.components.*

[options.entry_points]
console_scripts =
  geminal = src.Geminal:main
